# pdf-signer-linux

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml  test-packages.yml
packaging/: build-deb.sh  build-rpm.sh  pdfsigner.desktop
packaging/deb/DEBIAN/: control
packaging/rpm/: pdfsigner.spec
pdfsigner/: __init__.py  __main__.py  applog.py  certstore.py  diagnostics.py  gui.py  i18n.py  main.py  pdfstamp.py  settings.py  signer.py  stamp.py  stamp_editor.py
tests/: test_applog.py  test_certstore.py  test_diagnostics.py  test_integration.py  test_settings.py  test_signer.py  test_stamp.py
