[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfsigner"
version = "1.0.2"
description = "Desktop PDF signing and visible stamp tool for Linux with CryptoPro CSP"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [{name = "shurshick"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pyhanko>=0.25.0",
    "python-pkcs11>=0.7.0",
    "PyQt5>=5.15.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "cryptography>=41.0.0",
]

[project.scripts]
pdfsigner = "pdfsigner.main:main"

[project.urls]
Homepage = "https://github.com/shurshick/pdf-signer-linux"
Repository = "https://github.com/shurshick/pdf-signer-linux"

[tool.setuptools.packages.find]
include = ["pdfsigner*"]
